# FotballManager

./: CMakeLists.txt  Defender.cpp  Defender.h  Forward.cpp  Forward.h  Goalkeeper.cpp  Goalkeeper.h  Midfielder.cpp  Midfielder.h  Player.cpp  Player.h  Tactic.cpp  Tactic.h  Team.cpp  Team.h  enums.h  functions.cpp  functions.h  main.cpp
